[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/Obstacles/Plank.png" type="Texture" id=1]
[ext_resource path="res://scripts/Obstacles/Obstacle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.6573, 4.52054 )

[node name="PlanksObstacle" type="Area2D"]
scale = Vector2( 0.981023, 1 )
script = ExtResource( 2 )

[node name="Plank" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 3.18754, 3.18754 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3.31862, 4.90922 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 21.048, -14.6953 )
rotation = 3.14159
scale = Vector2( 5.49872, -0.911971 )
rect = Rect2( -10, -10, 32, 32 )

[connection signal="body_shape_entered" from="." to="." method="_on_PlanksObstacle_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
